--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<title>Manny's Blog</title>
+		<title>Immanuel Amirtharaj</title>
 		<style>
 
 			body {
@@ -46,6 +46,7 @@
 			.description {
 				font-size: 14pt;
 				line-height: 25pt;
+				text-align: justify;
 			}
 
 			.card {
@@ -93,6 +94,11 @@
 				margin: 10%;
 			}
 
+			.subtitle {
+				color: #C5C5C5;
+
+			}
+
 		</style>
 	</head>
 
@@ -100,7 +106,7 @@
 
 		<div class="card">
 			<h1>Immanuel Amirtharaj</h1>
-			<h3>Check on what I'm working on!</h3>
+			<h3 class="subtitle">I like making things</h3>
 		</div>
 
 
