fixed typos, UI changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 
 
 				<div class="footer">
-					<a href= {{ post.link }} >View Source</a>
+					<a href= {{ post.link }} >View Project</a>
 				</div>
 			</article>
 
