--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
 
 		<div class="card">
 			<h1>Immanuel Amirtharaj</h1>
-			<h3 class="subtitle">I like making things</h3>
+			<h3 class="subtitle">I build stuff for fun :)</h3>
 		</div>
 
 
