added meta tags for SEO

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,14 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<title>Immanuel Amirtharaj</title>
+
+		<meta charset="UTF-8">
+  		<meta name="description" content="A portfolio of Immanuel Amirtharaj's side projects">
+ 		<meta name="keywords" content="Manny, portfolio, iOS, full stack">
+  		<meta name="author" content="Immanuel Amirtharaj">
+  		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 		<style>
 
 			body {
